--- a/.github/workflows/publish-docker-image-every-push.yml
+++ b/.github/workflows/publish-docker-image-every-push.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - kf-multi-builder-ci
     paths-ignore:
       - 'CHANGELOG.md'
       - '**/README.md'
@@ -17,23 +18,17 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    outputs:
-      release-version: ${{ steps.output-step.outputs.release-version }}
-      short-sha: ${{ steps.output-step.outputs.short-sha }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup repo
-        uses: ./.github/actions/setup-repo-and-short-sha
+        uses: ./.github/actions/setup-repo
+        id: setup
         with:
           docker-username: ${{ secrets.DOCKER_USERNAME }}
           docker-password: ${{ secrets.DOCKER_PASSWORD }}
-
-
-      - name: Add outputs
-        run: |
-          echo "::set-output name=release-version::${{ env.NEXT_RELEASE_VERSION }}"
-          echo "::set-output name=short-sha::${{ env.SHORT_SHA }}"
-        id: output-step
+          docker-multi-platform: true
+          docker-arm-host: 3.145.97.144
+          docker-arm-host-key: ${{ secrets.ARM_RUNNER_KEY }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -43,7 +38,9 @@ jobs:
           push: true
           cache-from: type=registry,ref=blockscout/blockscout:buildcache
           cache-to: type=registry,ref=blockscout/blockscout:buildcache,mode=max
-          tags: blockscout/blockscout:master, blockscout/blockscout:${{ env.RELEASE_VERSION }}.commit.${{ env.SHORT_SHA }}
+          platforms: ${{ steps.setup.outputs.docker-platforms }}
+          tags: ${{ steps.setup.outputs.docker-tags }}
+          labels: ${{ steps.setup.outputs.docker-labels }}
           build-args: |
             CACHE_EXCHANGE_RATES_PERIOD=
             API_V1_READ_METHODS_DISABLED=false
@@ -65,7 +62,7 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile
-          push: true
+          push: false
           cache-from: type=registry,ref=blockscout/blockscout:buildcache
           tags: blockscout/blockscout:frontend-main
           build-args: |
@@ -79,34 +76,3 @@ jobs:
             SESSION_COOKIE_DOMAIN=k8s-dev.blockscout.com
             BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-beta.+commit.${{ env.SHORT_SHA }}
             RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-  deploy_e2e:
-    needs: push_to_registry
-    runs-on: ubuntu-latest
-    permissions: write-all
-    steps:
-      - name: Get Vault credentials
-        id: retrieve-vault-secrets
-        uses: hashicorp/vault-action@v2.4.1
-        with:
-          url: https://vault.k8s.blockscout.com
-          role: ci-dev
-          path: github-jwt
-          method: jwt
-          tlsSkipVerify: false
-          exportToken: true
-          secrets: |
-            ci/data/dev/github token | WORKFLOW_TRIGGER_TOKEN ;
-      - name: Trigger deploy
-        uses: convictional/trigger-workflow-and-wait@v1.6.1
-        with:
-          owner: blockscout
-          repo: deployment-values
-          github_token: ${{env.WORKFLOW_TRIGGER_TOKEN}}
-          workflow_file_name: deploy_blockscout.yaml
-          ref: main
-          wait_interval: 30
-          client_payload: '{ "instance": "dev", "globalEnv": "e2e"}'
-  test:
-    needs: deploy_e2e
-    uses: blockscout/blockscout-ci-cd/.github/workflows/e2e_new.yaml@master
-    secrets: inherit
