--- a/docker-compose/proxy/default.conf.template
+++ b/docker-compose/proxy/default.conf.template
@@ -21,7 +21,7 @@ server {
         proxy_cache_bypass    $http_upgrade;
     }
     location / {
-        proxy_pass            ${FRONT_PROXY_PASS};
+        proxy_pass            http://stats:3000/;
         proxy_http_version    1.1;
         proxy_set_header      Host "$host";
         proxy_set_header      X-Real-IP "$remote_addr";
